--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,11 @@
         "typeinfo": "cpp",
         "unordered_map": "cpp",
         "variant": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "__tree": "cpp",
+        "condition_variable": "cpp",
+        "deque": "cpp",
+        "map": "cpp",
+        "queue": "cpp"
     }
 }
