--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,11 @@ if(POLICY CMP0167)
 endif()
 
 file(GLOB_RECURSE SOURCES "src/*.cpp")
+list(APPEND SOURCES benchmark/benchmark_engine.cpp)
+list(APPEND SOURCES benchmark/generate_orders.cpp)
 
 find_package(Boost REQUIRED)
+find_package(benchmark REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -21,5 +24,7 @@ include_directories(${Boost_INCLUDE_DIRS})
 enable_testing()
 
 # add_executable(main src/main.cpp src/matching/order.cpp)
-add_executable(main ${SOURCES})
-target_link_libraries(main Boost::boost)
+# add_executable(main ${SOURCES})
+add_executable(benchmark_engine benchmark/benchmark_engine.cpp ${SOURCES})
+
+target_link_libraries(benchmark_engine Boost::boost benchmark::benchmark)
